# axum-template

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml
assets/: basic.css  template.html
src/: data.rs  error.rs  form_zip.rs  handlers.rs  main.rs  middleware.rs
src/db/: mod.rs  sqlite.rs  surreal.rs
static/: browserconfig.xml  cassidoo.js  custom.css  glitch.css  main.css  manifest.json  particles-cfg.js  particles.js  sitemap-0.xml  sitemap-index.xml
templates/: 404.html  first.html  footer.html  head.html  hello.html  home.html  main.css  main.html  nav-item.html  nav.html  page.html  posts.html  second.html  third.html
