[package]
name = "axum-template"
version = "0.1.0"
authors = ["Oleks Pickle <olekspickle@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
askama = "0.12"
axum = "0.7"
hyper = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "2", default-features = false, features = ["aes-crypto"] }

# Optimizations

# Optimized to compile times
# [profile.dev]
# debug = 0
# [profile.release]
# debug = 0

# Optimized to minimum size bin target
# https://doc.rust-lang.org/cargo/reference/profiles.html
# if you want more optimization there is only no_std path and other hacks
#[profile.release]
#opt-level = "z"     # Optimize for size.
#lto = true          # Enable Link Time Optimization
#panic = "abort"     # Abort on panic
#strip = "symbols"   # (or true) Automatically strip symbols from the binary ().
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.

# Optimized to runtime performance
# [profile.release]
# lto = true
# codegen-units = 1
# panic = "abort"

# statically link C runtime on *-musl targets
# https://github.com/rust-lang/rust/issues/59302
# [target.x86_64-unknown-linux-musl]
# rustflags = "-Ctarget-feature=-crt-static"
