[package]
name = "axum-template"
version = "0.1.0"
authors = ["Oleks Pickle <olekspickle@users.noreply.github.com>"]
edition = "2021"
licence = "MIT OR Apache-2.0"
repository = "https://github.com/olekspickle/axum-template"
description = """
Axum template with askama templates and a bit of htmx magic and simple surrealdb setup
"""

[features]
default = ["sqlite"]
sqlite = ["deadpool", "deadpool-sqlite", "rusqlite", "serde_rusqlite"]
surreal = ["surrealdb"]

[dependencies]
anyhow = "1"
askama = "0.12"
axum = { version = "0.7", features = ["macros"] }
hyper = "1"
rustls = "0.23.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "2", default-features = false, features = ["aes-crypto"] }

#sqlite
deadpool = { version = "0.12.1", optional = true }
deadpool-sqlite = { version = "0.9.0", optional = true }
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true }
serde_rusqlite = { version ="0.36.0", optional = true }

# surrealdb
surrealdb = { version = "2", optional = true }
http = "1.1.0"

# Optimizations

# Optimized to compile times
# [profile.dev]
# debug = 0
# [profile.release]
# debug = 0

# Optimized to minimum size bin target
# https://doc.rust-lang.org/cargo/reference/profiles.html
# if you want more optimization there is only no_std path and other hacks
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
panic = "abort"     # Abort on panic
strip = "symbols"   # (or true) Automatically strip symbols from the binary ().
codegen-units = 1   # Reduce number of codegen units to increase optimizations.

# Optimized to runtime performance
# [profile.release]
# lto = true
# codegen-units = 1
# panic = "abort"

# statically link C runtime on *-musl targets
# https://github.com/rust-lang/rust/issues/59302
# [target.x86_64-unknown-linux-musl]
# rustflags = "-Ctarget-feature=-crt-static"
